--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <form id="searchForm" class="header-searchForm">
       <input type="text" placeholder="Vengadores" />
-      <button>🔍</button>
+      <button id="searchBtn">🔍</button>
     </form>
   </header>
 
@@ -30,30 +30,8 @@
       <button class="trendingPreview-btn">Ver más</button>
     </div>
 
-    <article class="trendingPreview-movieList">
-      <div class="movie-container">
-        <img
-          src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-          class="movie-img"
-          alt="Nombre de la película"
-        />
-      </div>
+    <article class="trendingPreview-movieList"> 
 
-      <div class="movie-container">
-        <img
-          src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-          class="movie-img"
-          alt="Nombre de la película"
-        />
-      </div>
-
-      <div class="movie-container">
-        <img
-          src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-          class="movie-img"
-          alt="Nombre de la película"
-        />
-      </div>
     </article>
   </section>
 
@@ -61,17 +39,7 @@
     <h2 class="categoriesPreview-title">Categorías</h2>
 
     <article class="categoriesPreview-list">
-      <div class="category-container">
-        <h3 id="id28" class="category-title">Romance</h3>
-      </div>
 
-      <div class="category-container">
-        <h3 id="id16" class="category-title">Drama</h3>
-      </div>
-
-      <div class="category-container">
-        <h3 id="id14" class="category-title">Acción</h3>
-      </div>
     </article>
   </section>
 
@@ -154,8 +122,9 @@
   </section>
 
   <footer>Hecho con amor en Platzi por @juandc</footer>
-  
-  <script src="./src/secrets.mjs"></script>
-  <script src="./src/main.js"></script>
-</body>
+  <script src="/src/secrets.js"></script>
+  <script src="/src/nodes.js"></script>
+  <script src="/src/main.js"></script>
+  <script src="/src/navigation.js"></script>
+  </body>
 </html>
