--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
   </section>
 
   <footer>Hecho con amor en Platzi por @juandc</footer>
-  <script src="/src/secrets.js"></script>
-  <script src="/src/nodes.js"></script>
-  <script src="/src/main.js"></script>
-  <script src="/src/navigation.js"></script>
+  <script src="./src/secrets.js"></script>
+  <script src="./src/nodes.js"></script>
+  <script src="./src/main.js"></script>
+  <script src="./src/navigation.js"></script>
   </body>
 </html>
