--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </article>
   </section>
 
-  <footer>Hecho con amor en Platzi por @juandc</footer>
+  <footer>Hecho con amor en Platzi por @javiers123</footer>
   <script src="./src/secrets.js"></script>
   <script src="./src/nodes.js"></script>
   <script src="./src/main.js"></script>
