--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
     </article>
   </section>
 
+  <section id="liked" class="liked-container">
+    <div class="liked-header">
+      <h2 class="liked-title">Peliculas favoritas</h2>
+    </div>
+
+    <article class="liked-movieList">
+      
+    </article>
+  </section>
+
   <section id="genericList" class="genericList-container inactive">
     <div class="movie-container movie-container--loading"></div>
     <div class="movie-container movie-container--loading"></div>
